Change usages of `<stream>.toList()` to `<stream>.collect(Collectors.toList())`
Signed-off-by: Thomas Farr <tsfarr@amazon.com>